--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+logging.level.org.springframework.security=DEBUG
+jwt.secret=${JWT_SECRET:3f61a15b857cf433aae03a0zhasjhd}
+jwt.expiration-delay=${JWT_EXPIRE_DELAY:86400}
