--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp -r dist src/main/resources/static",
+    "build": "vite build && cp -r dist/* src/main/resources/static",
     "preview": "vite preview"
   },
   "devDependencies": {
