--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ToDolist
-spring.datasource.url=jdbc:mysql://localhost:3306/todolistdb
-spring.datasource.username=root
-spring.datasource.password=securepswd
+spring.datasource.url=jdbc:mysql://${MYSQL_URL:mysqldb}/${MYSQL_DB:todolistdb}
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:securepswd}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
