implement file uploading

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.springframework.security=DEBUG
 jwt.secret=${JWT_SECRET:3f61a15b857cf433aae03a0zhasjhd}
 jwt.expiration-delay=${JWT_EXPIRE_DELAY:86400}
+
+file.upload-dir=/Users/justt/workspace/spring-boot-images
